[package]
name = "Fuzzing"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cli"
path = "cli.rs"

[dependencies]
honggfuzz = "0.5.54"
git-url-parse = {git= "https://github.com/tjtelan/git-url-parse-rs"}
exmex = { git = "https://github.com/bertiqwerty/exmex/" }

# Targets
[[bin]]
name="git-url-parse"
path = "targets/git-url-parse.rs"

[[bin]]
name="exmex"
path = "targets/exmex.rs"